# detection-labelling

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  script.py
detection_labelling/: config.py
detection_labelling/annotate_images/: __init__.py  __main__.py  config.yaml  image_annotation.py  types.py
detection_labelling/deduplicate_frames/: __init__.py  __main__.py  config.yaml  config_full.yaml  frames_dedup.py  parking_polygons.json  types.py
detection_labelling/extract_and_upload_frames/: __init__.py  __main__.py  __main__.py.py  config.yaml  frame_handling.py  frame_scoring.py  frame_selection.py  types.py  video_processing.py
detection_labelling/extract_frames/: __init__.py  __main__.py  config.yaml  config_full.yaml  config_min.yaml  frame_extraction.py  types.py
detection_labelling/fetch_coco_samples/: __init__.py  __main__.py  coco_fetching.py  config.yaml  types.py
detection_labelling/merge_annotations/: __init__.py  __main__.py  annotations_merging.py  config.yaml  types.py
detection_labelling/select_initial_batch/: __init__.py  __main__.py  byol_training.py  config.yaml  config_full.yaml  dataset.py  embeddings_calculation.py  initial_batch_selection.py  types.py
detection_labelling/utils/: __init__.py  config.py  inference.py  logging.py  pascal_voc.py  storage_fs.py  yaml_config.py
docs/: mkdocs.yml
docs/docs/: index.md
